# rust-actix-example

./: .gitignore  Cargo.toml
migrations/2019-09-30-115154_create_users/: up.sql
src/: auth.rs  config.rs  database.rs  errors.rs  extractors.rs  helpers.rs  main.rs  routes.rs  schema.rs  server.rs
src/handlers/: auth.rs  user.rs
src/models/: user.rs
src/tests/: helpers.rs
