[package]
name = "rust_actix_example"
version = "0.1.0"
authors = ["dannyvi"]
edition = "2021"

[dependencies]
actix = "0.13"
actix-cors = "0.6"
actix-files = "0.6"
actix-identity = "0.5"
actix-redis = "0.12"
actix-rt = "2.7"
actix-service = "2"
actix-web = "4"
argon2rs = "0.2"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4.7", features = ["chrono", "mysql", "postgres", "sqlite", "r2d2", "uuid"] }
dotenv = "0.15"
envy = "0.4"
env_logger = "0.9"
futures = "0.3.24"
jsonwebtoken = "8"
lazy_static = "1.4"
listenfd = "1"
log = "0.4"
rayon = "1.5"
redis-async = "0.13"
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
validator = "0.16.0"
validator_derive = "0.16.0"

[dev-dependencies]
actix-http-test = "3"

[features]
cockroach = []
mysql = []
postgres = []
sqlite = []
default = ["sqlite"]